--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==3.0.2
+Flask==2.3.3
 gunicorn==21.2.0
-numpy==1.26.4
+numpy==1.25.2
 pandas==2.2.2
-scikit-learn==1.5.1
+scikit-learn==1.6.1
 joblib==1.4.2
+
